Main section added to index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
       </ul>
     </div>
   </nav>
-
+  <main>
+    <div class="container">
+      <h2>background colour : <span class="colour">
+          #f1f5f8
+        </span>
+      </h2>
+      <button class="btn btn-hero" id="btn">click me</button>
+    </div>
+  </main>
   <!-- javascript -->
   <script src="app.js"></script>
 </body>
